--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 
 <body>
+
+<section class="container">
+
+    <section class="hero">
  <header><h2>ANALOG CLOCK</h2></header>
     <div class="main">
         <div class="clock">
@@ -36,6 +40,8 @@
     <footer>
         <h1>Developer: Musadique Muslim</h1>
     </footer>
+</section>
+</section>
     <script src="app.js"></script>
 </body>
 
