--- a/index.html
+++ b/index.html
@@ -10,38 +10,40 @@
 
 <body>
 
-<section class="container">
+    <section class="container">
 
-    <section class="hero">
- <header><h2>ANALOG CLOCK</h2></header>
-    <div class="main">
-        <div class="clock">
+        <section class="hero">
+            <header>
+                <h2>ANALOG CLOCK</h2>
+            </header>
+            <div class="main">
+                <div class="clock">
 
 
-            <div style="--color:black; --h:70px" id="hour" class="niddle red"><i></i></div>
-            <div style="--color:black; --h:90px" id="min" class="niddle blue"><i></i></div>
-            <div style="--color:red; --h:100px" id="sec" class="niddle green"><i></i></div>
-            <span style="--i:1;"><b>1</b></span>
-            <span style="--i:2;"><b>2</b></span>
-            <span style="--i:3;"><b>3</b></span>
-            <span style="--i:4;"><b>4</b></span>
-            <span style="--i:5;"><b>5</b></span>
-            <span style="--i:6;"><b>6</b></span>
-            <span style="--i:7;"><b>7</b></span>
-            <span style="--i:8;"><b>8</b></span>
-            <span style="--i:9;"><b>9</b></span>
-            <span style="--i:10;"><b>10</b></span>
-            <span style="--i:11;"><b>11</b></span>
-            <span style="--i:12;"><b>12</b></span>
+                    <div style="--color:black; --h:70px" id="hour" class="niddle red"><i></i></div>
+                    <div style="--color:black; --h:90px" id="min" class="niddle blue"><i></i></div>
+                    <div style="--color:red; --h:100px" id="sec" class="niddle green"><i></i></div>
+                    <span style="--i:1;"><b>1</b></span>
+                    <span style="--i:2;"><b>2</b></span>
+                    <span style="--i:3;"><b>3</b></span>
+                    <span style="--i:4;"><b>4</b></span>
+                    <span style="--i:5;"><b>5</b></span>
+                    <span style="--i:6;"><b>6</b></span>
+                    <span style="--i:7;"><b>7</b></span>
+                    <span style="--i:8;"><b>8</b></span>
+                    <span style="--i:9;"><b>9</b></span>
+                    <span style="--i:10;"><b>10</b></span>
+                    <span style="--i:11;"><b>11</b></span>
+                    <span style="--i:12;"><b>12</b></span>
 
-        </div>
-    </div>
+                </div>
+            </div>
 
-    <footer>
-        <h1>Developer: Musadique Muslim</h1>
-    </footer>
-</section>
-</section>
+            <footer>
+                <h1>Developer: Musadique Muslim</h1>
+            </footer>
+        </section>
+    </section>
     <script src="app.js"></script>
 </body>
 
